[gd_scene load_steps=5 format=3 uid="uid://bnhcg8c133of6"]

[ext_resource type="Script" path="res://Puzzle/PressurePlate.gd" id="1_c4uu7"]
[ext_resource type="Texture2D" uid="uid://bil4m5tdtu4tg" path="res://Art/barrelBlack_top.png" id="2_rkfds"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1gis2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dmrh0"]

[node name="PressurePlate" type="StaticBody2D"]
script = ExtResource("1_c4uu7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_rkfds")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1gis2")

[node name="PressDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PressDetector"]
shape = SubResource("CircleShape2D_dmrh0")

[connection signal="body_entered" from="PressDetector" to="." method="_on_press_detector_body_entered"]
[connection signal="body_exited" from="PressDetector" to="." method="_on_press_detector_body_exited"]
